Fix overflow on homepage  bc of animation

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,6 +13,11 @@ nav {
 	gap: 2rem;
 }
 
+html,body {
+	overflow-x: hidden;
+	max-width: 100%;
+}
+
 /* ------ Header ------ */
 
 header {
